--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -1,3 +1,21 @@
+@ARTICLE{Kipping2012,
+   author = {{Kipping}, D.~M.},
+    title = "{An analytic model for rotational modulations in the photometry of spotted stars}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1209.2985},
+ primaryClass = "astro-ph.SR",
+ keywords = {methods: analytical, techniques: photometric, planetary systems, starspots},
+     year = 2012,
+    month = dec,
+   volume = 427,
+    pages = {2487-2511},
+      doi = {10.1111/j.1365-2966.2012.22124.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.427.2487K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Aigrain2015b,
    author = {{Aigrain}, S. and {Hodgkin}, S.~T. and {Irwin}, M.~J. and {Lewis}, J.~R. and
 	{Roberts}, S.~J.},
