--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -71,31 +71,28 @@ University,  Princeton, NJ}
 \begin{abstract}
 The light curves of spotted, rotating stars are often non-sinusoidal and
 quasi-periodic---spots are not static on the stellar surface and have finite
-lifetimes causing stellar flux variations to slowly shift in phase.
-A strictly periodic sinusoid is therefore not a representative model for the
-light curve of star with a rotational signal.
-Ideally, a physical model of the stellar surface would be conditioned on the
-data, however the parameters of such models can be highly degenerate
-\citep[\eg][]{Russell1906, Jeffers2009}.
-Instead, we use an appropriate {\it effective} model: a Gaussian Process (GP)
+lifetimes, causing stellar flux variations to slowly shift in phase.
+A strictly periodic sinusoid therefore cannot accurately model a 
+rotationally modulated stellar light curve.
+Physical models of the stellar surface also have many drawbacks preventing effective
+inference, such as having highly degenerate or high-dimensional parameter spaces
+\citep[\eg][]{Russell1906, Jeffers2009, Kipping2012}.
+In this work, we introduce an appropriate {\it effective} model: a Gaussian Process (GP)
 with a quasi-periodic covariance kernel function.
-By modelling the light curve with a GP, a highly flexible semi-parametric
-function, we avoid the necessity of choosing a `best fitting' functional form,
-whilst sampling directly from the posterior Probability Density Function (PDF)
-of the periodic parameter and marginalising over the other kernel
-hyperparameters.
-We use \naigrain\ simulated light curves with a range of rotation periods to
-    test the GP model and compare our results with a sine-fitting periodogram
-    method and an AutoCorrelation Function (ACF) method.
-The posterior PDFs of the parameters were sampled using the affine invariant
-    ensemble Markov Chain Monte Carlo (MCMC) sampler {\tt emcee3}
-    \citep{Foreman-Mackey2013}, and the GP operations were performed using the
-    {\tt george} python package \citep{George}.
-We demonstrate that rotation periods inferred via this method are more
-    accurate than the periodogram and ACF methods.
-Furthermore, the rotation periods are inferred probabilistically, allowing
-    them to be easily incorporated into follow-on studies; inferring stellar
-    ages or characterising star-planet interactions for example.
+Using this highly flexible model, 
+we are able to sample from the posterior Probability Density Function
+(PDF) of the periodic parameter, marginalising over the other kernel hyperparameters
+using a Markov Chain Monte Carlo approach.
+To test this method's effectiveness, we infer rotation periods from 
+\naigrain\ simulated light curves, demonstrating that our results 
+    are more accurate than both a sine-fitting periodogram and an 
+    AutoCorrelation Function (ACF) method.
+We also demonstrate that it works effectively on real data, by 
+inferring rotation periods for \nkois\ \Kepler\ stars.
+Because this method delivers posteriors PDFs, 
+it will enable other studies involving stellar rotation, 
+such as inferring stellar
+ages or stellar obliquities in exoplanet systems, or characterising star-planet interactions.
 % Thehe ACF method is not applicable to unevenly spaced data,
 % therefore it is inappropriate for the ~$10^7$ stellar light curves expected
 % to be produced by \LSST\ unlike the GP method.
