removed references in abstract

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -75,8 +75,8 @@ lifetimes, causing stellar flux variations to slowly shift in phase.
 A strictly periodic sinusoid therefore cannot accurately model a 
 rotationally modulated stellar light curve.
 Physical models of the stellar surface also have many drawbacks preventing effective
-inference, such as having highly degenerate or high-dimensional parameter spaces
-\citep[\eg][]{Russell1906, Jeffers2009, Kipping2012}.
+inference, such as having highly degenerate or high-dimensional parameter spaces.
+% \citep[\eg][]{Russell1906, Jeffers2009, Kipping2012}.
 In this work, we introduce an appropriate {\it effective} model: a Gaussian Process (GP)
 with a quasi-periodic covariance kernel function.
 Using this highly flexible model, 
