--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -2835,3 +2835,52 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013yCat..35580053K},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+% emcee3 citations
+
+@article{terBraak2006,
+  title={A Markov Chain Monte Carlo version of the genetic algorithm Differential Evolution: easy Bayesian computing for real parameter spaces},
+  author={Ter Braak, Cajo JF},
+  journal={Statistics and Computing},
+  volume={16},
+  number={3},
+  pages={239--249},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{terBraak2008,
+  title={Differential evolution Markov chain with snooker updater and fewer chains},
+  author={ter Braak, Cajo JF and Vrugt, Jasper A},
+  journal={Statistics and Computing},
+  volume={18},
+  number={4},
+  pages={435--446},
+  year={2008},
+  publisher={Springer}
+}
+
+@ARTICLE{Nelson2014,
+   author = {{Nelson}, B. and {Ford}, E.~B. and {Payne}, M.~J.},
+    title = "{RUN DMC: An Efficient, Parallel Code for Analyzing Radial Velocity Observations Using N-body Integrations and Differential Evolution Markov Chain Monte Carlo}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1311.5229},
+ primaryClass = "astro-ph.EP",
+ keywords = {methods: statistical, planetary systems, techniques: radial velocities },
+     year = 2014,
+    month = jan,
+   volume = 210,
+      eid = {11},
+    pages = {11},
+      doi = {10.1088/0067-0049/210/1/11},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJS..210...11N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{kombine,
+   author = {{Farr}, B. and {Farr}, W.~M.},
+    title = {kombine: a kernel-density-based, embarrassingly parallel ensemble sampler},
+     year = 2017,
+     note = "in prep"
+}
