--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -108,61 +108,50 @@ The light curves of spotted, rotating stars are often non-sinusoidal and
 Quasi-Periodic (QP).
 These stars vary in brightness due to active regions on their surfaces which
 rotate in and out of view.
-The non-sinusoidal quality is caused by the complicated surface spot patterns
-and the quasi-periodicity is produced both by the finite lifetimes of these
-active regions and the presence of differential rotation on the stellar
-surface.
-A strictly periodic sinusoid is therefore not a good model for stellar light
-curves.
-In an ideal world, a physical model of the stellar surface would be
-conditioned on the data.
-A physically realistic model would perfectly capture the complexity of shapes
+Complicated surface spot patterns produce the non-sinusoidal quality,
+and the finite lifetimes of these active regions and the presence of 
+differential rotation on the stellar surface produce quasi-periodicity.
+A strictly periodic sinusoid therefore does not well describe 
+rotationally modulated stellar light curves.
+A physically realistic model of the stellar surface 
+would perfectly capture the complexity of shapes
 within stellar light curves as well as the quasi-periodic nature, allowing for
-extremely precise probabilistic period recovery.
+extremely precise probabilistic period recovery when conditioned on the data.
 However, such physical models require many free parameters in order to
 accurately represent a stellar surface and some of these parameters are
-extremely degenerate \citep[\eg][]{Russell1906, Jeffers2009}.
+extremely degenerate \citep[\eg][]{Russell1906, Jeffers2009, Kipping2012}.
 In addition to global stellar parameters such as inclination and rotation
 period, each spot or active region should have (at minimum) a longitude,
 latitude, size, temperature and lifetime.
-Considering that many stars have on the order of hundreds of spots, the number
-of free parameters quickly becomes unwieldy, especially if the posterior PDFs
-of these parameters are explored with MCMC.
+Considering that many stars likely have hundreds of spots, the number
+of free parameters quickly becomes unwieldy, especially to explore
+their posterior PDFs with MCMC.
 Simplified spot models, such as the one described in \citet{Lanza2014} where
-only two spots are modelled, have produced successful results, however these
-simplified models sacrifice some precision due to lack of model flexibility.
-Instead of using a physical model for stellar light curves, we choose to use
-an {\it effective} model: one which captures the behaviour but is not
-physically motivated, although the parameters of this model may be {\it
-interpreted} as physical ones.
-An ideal effective model for the light curve of a spotted, rotating star is
-one with a small number of non-degenerate parameters that is flexible enough
-to perfectly capture non-sinusoidal, QP behaviour.
-These requirements are fulfilled by a Gaussian process (GP) model.
+only two spots are modelled, have produced successful results; however, such 
+relatively inflexible models sacrifice precision. 
 
 The standard methods used for measuring rotation periods include detecting
 peaks in a Lomb-Scargle \citep{Lomb1976, Scargle1982} (LS) periodogram
-\citep[e.g.][]{Reinhold2013}, Auto-Correlation Functions (ACFs)
+\citep[e.g.][]{Reinhold2013}, Auto-Correlation Functions (ACFs),
 \citep{Mcquillan2013} and wavelet transforms \citep{Garcia2014}.
 The precision of the LS periodogram and wavelet methods are limited by the
-suitability of the model choice.
-A sinusoid is used in the case of the LS periodogram and the wavelet method
-relies on a choice of mother wavelet that is assumed to describe the data over
-a range of transpositions \citep[see, \eg][]{Carter2010}.
+suitability of the model choice: a sinusoid for the LS periodogram, 
+and a choice of mother wavelet, assumed to desribe the data
+over a range of transpositions \citep[see, \eg][]{Carter2010}, 
+for the wavelet method.
 In contrast, the ACF method is much better suited to signals that are
 non-sinusoidal.
-In fact, it doesn't matter what shape the signal is: as long as it is
-approximately periodic the ACF will display peaks located at the rotation
-period.
-A drawback of the ACF method however, is that it requires data to be
+In fact, as long as it is approximately periodic the ACF will 
+display a peak at the rotation period, no matter the signal shape.
+A drawback of the ACF method, however, is that it requires data to be
 evenly-spaced\footnote{\citet{Edelson1988} describe a method for computing
-ACFs for unevenly-spaced data.} which is not exactly the case with \Kepler\
+ACFs for unevenly-spaced data.}, which is not exactly the case with \Kepler\
 light curves (although in many cases it can be approximated as uniformly
-sampled) and not nearly the case for the future large-scale survey instrument,
+sampled) and not nearly the case for the future large-scale survey instrument
 \LSST.
 An ACF is also an operation performed on the data, not a generative model of
-the data and is therefore not inherently probabilistic.
-For this reason it is very difficult to estimate the uncertainty on an ACF
+the data, and so not inherently probabilistic.
+Therefore, there is no justified way to estimate the uncertainty on an ACF
 rotation period measurement.
 % Many rotation periods in the literature have been inferred by measuring the
 % position of the first peak in an ACF, however this approach can be dangerous.
@@ -170,87 +159,81 @@ rotation period measurement.
 % of its true value, leading to an underestimate of the period.
 % We return to this point in section \textsection \ref{sec:discussion}.
 
-The motivation for developing a GP-based method for rotation period inference
-is, firstly to measure more accurate and precise rotation periods using a
-better-suited generative model than a sinusoid for the reasons explained
-above.
-Secondly, in order to infer {\it probabilistic} periods, i.e. to estimate the
-posterior PDF of the rotation period and thereby produce a realistic and
-estimate of its uncertainty.
-Thirdly, to allow for an additional correlated noise model to be included
-during regression, the parameters of which could be marginalised over.
-% And fourthly to provide some way of determining whether a periodic model is
-% supported by the data over a purely stochastic one.
+In this work, we introduce an {\it effective} model for rotationally
+modulated stellar light curves
+which captures the salient behaviour but is not
+physically motivated---although some parameters may indeed be 
+{\it interpreted} as physical ones.
+An ideal effective model should have a small number of non-degenerate parameters 
+and be flexible enough to perfectly capture non-sinusoidal, QP behaviour.
+A Gaussian process (GP) model fulfills these requirements. We use this GP 
+model as the generative model at the backbone of a method to probabilistically 
+infer accurate and precise stellar rotation periods.  This enables us to 
+estimate the posterior PDF of the rotation period, thereby producing a 
+justified estimate of its uncertainty while simultaneously marginalizing over
+parameters which model correlated noise.
 
 GPs are commonly used in the machine learning community and increasingly
 in other scientific fields, for example biology and geophysics.
 More recently, GPs have been used in the astronomy literature \citep[see
 \eg][]{Gibson2012, Haywood2014, Haywood2015, Evans2015, Rajpaul2015,
 Rajpaul2016, Aigrain2016}.
-% FIXME: CITATIONS Gibson, Aigrain, Evans, Rajpaul, Waldman(?), Cosmology,
-% geology, biology, Rasmussen & Williams, etc.
 They are useful in regression problems involving any stochastic process,
 specifically when the probability distribution for the process is a
 multi-variate Gaussian.
-If the probability of obtaining a data-set is a Gaussian in $N$ dimensions,
-where $N$ is the number of data points, that data-set can be described as, and
-with, a Gaussian process.
+If the probability of obtaining a dataset is a Gaussian in $N$ dimensions,
+where $N$ is the number of data points, a GP can describe that dataset. 
 An in-depth introduction to Gaussian processes is provided by
 \citet{Rasmussen2005}.
 
-GP models parameterise the covariance between data points and a kernel
-function provides the form of covariance matrix parameterisation.
-For example, take the time-series in figure \ref{fig:GP_example}.
-This is the \kepler\ light curve of KIC \kepexample, a relatively active star that
-rotates once every $\sim$ 4 days.
-The stochastic variability in this time-series is typical of \kepler\ FGK
-stars.
+GP models parameterise the covariance between data points by means of a kernel
+function that defines the form of the covariance matrix.
+For example, take the time-series in Figure \ref{fig:GP_example}: 
+the \kepler\ light curve of KIC \kepexample, a relatively active star that
+rotates once every $\sim$ 4 days, with stochastic variability typical of 
+\kepler\ FGK stars.
 Clearly, data points in this light curve are correlated.
-Points that are close together in time are tightly correlated and those that
-are widely separated in time are loosely correlated.
-The way in which the covariance varies with the separation between data points
-is modelled when using GP regression; it is not the data but the {\it
-covariance structure} that is modelled.
-This fact is what gives GPs their flexibility---they can model any time
+Points close together in time are tightly correlated and points more
+widely separated are loosely correlated.
+A GP models the way in which this correlation varies with the separation between 
+data points; that is, it models not the data directly but rather the {\it 
+covariance structure}.
+This gives GPs their flexibility---they can model any time
 series with a similar covariance structure.
 In addition, a very simple function can usually capture the covariance
 structure of a light curve, whereas a much more complicated one may be
-required to model the time-series itself.
-% The light curve of \Kepler-452 has been modelled with a GP in figure
-% \ref{fig:GP_example}, shown in orange.
-In figure \ref{fig:GP_example} the light curve of KIC \kepexample\ has been
-modelled with a GP.
+required to model the time series itself.
+Figure \ref{fig:GP_example} demonstrates how the light curve of KIC \kepexample\ 
+may be modelled with a GP.
 % Both provide adequate fits to the data, however only the periodic kernel
 % function, `QP' is a useful model because it has a periodic parameter.
 % I return to this point shortly.
 
-A range of kernel functions could be used to describe stellar variability.
+A range of kernel functions can describe stellar variability.
 For example, the simplest and most commonly used kernel function, the `Squared
-Exponential' (SE) produces an adequate fit to the KIC \kepexample\ light
-curve.
-The SE kernel function is defined as,
+Exponential' (SE), defined as follows, 
+produces an adequate fit to the KIC \kepexample\ light curve:
 \begin{equation}
 k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} \right).
 \end{equation}
 \label{eq:SE}
 Here $A$ is the amplitude of covariance, $l$ is the length scale of
-exponential decay and $x_i-x_j$ is the separation between data points.
-The SE kernel function has the advantage of being very simple---it has just
-two parameters, a covariance amplitude and length scale: $A$ and $l$.
-If $l$ is large two data points far apart in $x$ will be tightly correlated,
+exponential decay, and $x_i-x_j$ is the separation between data points.
+The SE kernel function has the advantage of being very simple, with
+just two parameters, $A$ and $l$.
+If $l$ is large, two data points far apart in $x$ will be tightly correlated,
 and if small they will be loosely correlated.
 Another property of the SE kernel function is that it produces functions that
 are infinitely differentiable.
 It is therefore possible to model a data set and its derivatives
 simultaneously.
 % \citep[see \eg][]{Rajpaul2015}
-The SE kernel function is not a good model of the covariance in stellar light
-curves, nor a {\it useful} one for the problem of rotation period inference
-because it does not capture periodic behaviour.
-In order to infer rotation periods it is necessary to use a periodic kernel
-function.
-For this reason, we use the `Quasi-Periodic' kernel function.
-The QP kernel function is defined as
+
+However, The SE kernel function is not a good model of the covariance 
+in stellar light curves, nor a {\it useful} one for the problem of 
+rotation period inference because it does not capture periodic behaviour.
+In order to infer rotation periods it is thus necessary to use a periodic kernel
+function.  For this reason, we use the `Quasi-Periodic' kernel, defined as
 \begin{equation}
 k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} -
 \Gamma^2 \sin^2(\frac{2\pi}{P}) \right).
@@ -268,37 +251,29 @@ If $\Gamma$ is large, points separated by one period are tightly
 correlated and points separated by slightly more or less are still highly
 correlated although less so.
 This kernel function allows two data points that are separated in time by one
-rotation period to be tightly correlated, while points separated by half a
-period can be weakly correlated.
-We also use an extra parameter, $\sigma$ which is an additional white noise
+rotation period to be tightly correlated, while also allowing 
+points separated by half a period to be weakly correlated.
+We also use an extra parameter $\sigma$ which is an additional white noise
 term added to the diagonal elements of the covariance matrix.
 It is the fraction by which the observational uncertainties have been
 underestimated --- if the uncertainties reported on the data are too small,
 this parameter will be non-zero.
 In practice however, this parameter should always be non-zero when performing
 GP regression.
-This is because the covariance matrix must be positive definite, however
+This is because the covariance matrix must be positive definite; however,
 matrix inversion performed using most solvers is approximate, not exact,
-therefore slight deviations from positive definiteness can arise.
+so slight deviations from positive definiteness can arise.
 Including a small amount of extra variance in the model allows enough
 flexibility that the matrix inversion algorithms do not run into numerical
-issues.
+issues.  We use this QP kernel function to produce the GP model 
+that fits the \Kepler\ light curve in in Figure \ref{fig:GP_example}.
 
-This QP kernel function was used to produce the model shown in figure
-~\ref{fig:GP_example}.
-
-In order to infer a stellar rotation period from a light curve, we fit a GP
-model with a QP kernel function to the data.
-The likelihood of the model, conditioned on the data could then be maximised
-in order to find the maximum likelihood value for $P$.
-In this study however, the full posterior PDFs of the parameters are explored
-using MCMC.
-This approach comes at a cost: a GP model is expensive to compute once as it
-requires an inversion and determinant evaluation of the covariance matrix, let
-alone the many thousands of times that is necessary to fully explore the
-posteriors of the parameters.
-Fully exploring the posterior PDF of $P$ is important however, as it provides
-an accurate estimate of the uncertainty on the rotation period.
+To infer a stellar rotation period from a light curve, we fit this QP-kernel
+GP model to the data.  As with any model-fitting exercise, the likelihood
+of the model could be maximized to find the maximum-likelihood value for $P$.
+In this study, however, we explore the full posterior PDFs using MCMC.  While
+this approach comes at a computational cost, such posterior exploration 
+importantly provides a justified estimate of the uncertainty on rotation period.
 
 \begin{figure}
 \begin{center}
@@ -313,11 +288,10 @@ covariance kernel function.}
 \end{figure}
 
 In \textsection \ref{sec:simulations} of this paper we describe the simulated
-light curves used to test rotation period inference methods.
-In \textsection \ref{sec:method} we describe the various methods used to
-recover the rotation periods: the periodogram, ACF and GP methods.
-In \textsection \ref{sec:kepler} we apply our method to real \kepler\ data and
-the results of the paper are discussed in \textsection \ref{sec:discussion}.
+light curves used to test the three rotation period recovery methods---periodogram,
+ACF, and GP---that we describe in detail in \textsection \ref{sec:method}.
+In \textsection \ref{sec:kepler} we apply our method to real \kepler\ data, and
+we discuss the results in \textsection \ref{sec:discussion}.
 
 \section{Simulated light curves}
 \label{sec:simulations}
