fixing double Suzanne in author list

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -52,10 +52,9 @@ processes}
 
 \author{%
    Ruth Angus\altaffilmark{\columbia},
-   Timothy Morton\altaffilmark{\princeton}
+   Timothy Morton\altaffilmark{\princeton},
    Suzanne Aigrain\altaffilmark{\oxford},
    Daniel Foreman-Mackey\altaffilmark{\uw}
-   Suzanne Aigrain\altaffilmark{\oxford},
    \& Vinesh Rajpaul\altaffilmark{\oxford}
 }
 
